--- a/booking.html
+++ b/booking.html
@@ -26,22 +26,22 @@
           <div class="collapse navbar-collapse" id="navmenu">
               <ul class="navbar-nav ms-auto">
                   <li class="#nav-item">
-                      <a href="#home" target="_blank" class="nav-link text-warning">
+                      <a href="#index.html" target="_blank" class="nav-link text-warning">
                           <h4>Home</h4>
                       </a>
                   </li>
                   <li class="#nav-item">
-                      <a href="#about" target="_blank" class="nav-link text-warning">
+                      <a href="#about.html" target="_blank" class="nav-link text-warning">
                           <h4>About Us</h4>
                       </a>
                   </li>
                   <li class="#nav-item">
-                      <a href="#contact" target="_blank" class="nav-link text-warning">
+                      <a href="#contact.html" target="_blank" class="nav-link text-warning">
                           <h4>Contact Us</h4>
                       </a>
                   </li>
                   <li class="#nav-item">
-                      <a href="#Book" target="_blank" class="nav-link text-warning">
+                      <a href="#booking.html" target="_blank" class="nav-link text-warning">
                           <h4>Booking</h4>
                       </a>
                   </li>
